--- a/.github/workflows/appinspect.yml
+++ b/.github/workflows/appinspect.yml
@@ -22,8 +22,7 @@ jobs:
         run: pip install splunk-packaging-toolkit-1.0.1.tar.gz
       - name: Package app
         run: |
-          cd SA-CrowdstrikeDevices
-          slim package -o ~/build/package $(ls)
+          slim package -o ~/build/package SA-CrowdstrikeDevices
       - name: run Appinspect
         uses: splunk/appinspect-api-action@v3
         with:
