updated fossa job
Signed-off-by: Zachary Christensen <zchristensen@splunk.com>

--- a/.github/workflows/fossa.yml
+++ b/.github/workflows/fossa.yml
@@ -12,9 +12,5 @@ on:
 jobs:
   fossa-scan:
     name: Fossa Scan
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: fossas/fossa-action@main
-        with:
-          api-key: ${{secrets.FOSSAAPIKEY}}
+    uses: splunk/oss-scanning/.github/workflows/oss-scan.yml@main
+    secrets: inherit
