--- a/.github/workflows/appinspect.yml
+++ b/.github/workflows/appinspect.yml
@@ -28,6 +28,6 @@ jobs:
         with:
           username: ${{ secrets.API_USER }}
           password: ${{ secrets.API_PASS }}
-          app_path: build/package/
+          app_path: ~/build/package/
           included_tags: "cloud,self-service,future"
           
