added report collection
Signed-off-by: Zachary Christensen <zchristensen@splunk.com>

--- a/.github/workflows/appinspect.yml
+++ b/.github/workflows/appinspect.yml
@@ -28,6 +28,18 @@ jobs:
         with:
           username: ${{ secrets.API_USER }}
           password: ${{ secrets.API_PASS }}
-          app_path: ~/build/package/
+          app_path: /home/runner/build/package/
           included_tags: "cloud,self-service,future"
+      - name: Collect report
+        if: always()
+        uses: actions/upload-artifact@v3
+        with:
+          name: Appinspect-report
+          path: ~/reports/
+      - name: Collect app package
+        if: always()
+        uses: actions/upload-artifact@v3
+        with:
+          name: App-package
+          path: ~/build/packages/
           
