--- a/.github/workflows/appinspect.yml
+++ b/.github/workflows/appinspect.yml
@@ -22,13 +22,13 @@ jobs:
         run: pip install splunk-packaging-toolkit-1.0.1.tar.gz
       - name: Package app
         run: |
-          slim package -o ~/build/package SA-CrowdstrikeDevices
+          slim package -o build/package SA-CrowdstrikeDevices
       - name: run Appinspect
         uses: splunk/appinspect-api-action@v3
         with:
           username: ${{ secrets.API_USER }}
           password: ${{ secrets.API_PASS }}
-          app_path: SA-CrowdstrikeDevices
+          app_path: build/package
           included_tags: "cloud,self-service,future"
       - name: Collect report
         if: always()
@@ -41,5 +41,5 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: App-package
-          path: ~/build/package/
+          path: build/package/
           
