--- a/SA-CrowdstrikeDevices/default/app.conf
+++ b/SA-CrowdstrikeDevices/default/app.conf
@@ -3,6 +3,9 @@
 # To make changes, copy the section/stanza you want to change from ./default
 # into ../local and edit there.
 
+[author=ZachTheSplunker]
+email = zchristensen@splunk.com
+
 [id]
 name = SA-CrowdstrikeDevices
 version = 1.1.2
@@ -14,6 +17,7 @@ state = enabled
 build = 10
 
 [launcher]
+author  = ZachTheSplunker
 description = This supporting add-on allows device information pulled from CrowdStrike to be used with Splunk Enterprise Security's Asset Database.
 version = 1.1.2
 
