--- a/SA-CrowdstrikeDevices/default/app.conf
+++ b/SA-CrowdstrikeDevices/default/app.conf
@@ -4,11 +4,11 @@
 # into ../local and edit there.
 
 [author=ZachTheSplunker]
-email = zach@zachthesplunker.com
+email = zchristensen@splunk.com
 
 [id]
 name = SA-CrowdstrikeDevices
-version = 1.1.1
+version = 1.1.2
 
 [install]
 state_change_requires_restart = false
@@ -19,7 +19,7 @@ build = 10
 [launcher]
 author  = ZachTheSplunker
 description = This supporting add-on allows device information pulled from CrowdStrike to be used with Splunk Enterprise Security's Asset Database.
-version = 1.1.1
+version = 1.1.2
 
 [ui]
 is_visible = 0
