--- a/.github/workflows/fossa.yml
+++ b/.github/workflows/fossa.yml
@@ -12,5 +12,5 @@ on:
 jobs:
   fossa-scan:
     name: Fossa Scan
-    uses: splunk/oss-scanning/.github/workflows/oss-scan.yml@main
+    uses: splunk/oss-scanning-public/.github/workflows/oss-scan.yml@main
     secrets: inherit
