--- a/.github/ISSUE_TEMPLATE/02-docs-issue.yml
+++ b/.github/ISSUE_TEMPLATE/02-docs-issue.yml
@@ -33,5 +33,4 @@ body:
 
   - type: markdown
     attributes:
-      value: |
-        '## Thank you for taking the time to fill out this Docs Issue Report!'
+      value: '## Thank you for taking the time to fill out this Docs Issue Report!'
