--- a/.github/ISSUE_TEMPLATE/01-bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/01-bug-report.yml
@@ -68,5 +68,4 @@ body:
   
   - type: markdown
     attributes:
-      value: |
-        '## Thank you for taking the time to fill out this bug report!'
+      value: '## Thank you for taking the time to fill out this bug report!'
