--- a/SA-CrowdstrikeDevices/default/savedsearches.conf
+++ b/SA-CrowdstrikeDevices/default/savedsearches.conf
@@ -62,8 +62,9 @@ search = `sa_crowdstrike_index` sourcetype="crowdstrike:device:json" \
 | outputlookup key_field=_key crowdstrike_devices \
 | stats count
 
+# Deprecated
 [CrowdStrike Devices Lookup - Cleanup]
-disabled = false
+disabled = true
 cron_schedule = 29 * * * *
 description = removes old entries from kvstore lookup: crowdstrike_devices
 dispatch.earliest_time = -1s
