--- a/SA-CrowdstrikeDevices/default/managed_configurations.conf
+++ b/SA-CrowdstrikeDevices/default/managed_configurations.conf
@@ -7,9 +7,15 @@
 description = Device information generated from SA-Crowdstrike Devices.
 endpoint = /services/data/transforms/lookups/crowdstrike_devices
 editable = true
-label = CrowdStrike Devices Lookup - Gen
+label = SA-CrowdStrikeDevices
 lookup_type = search
 savedsearch = CrowdStrike Devices Lookup - Gen
+retention = {\
+    "disabled": 0,\
+    "earliestTime": "-2d",\
+    "timeField": "_last_seen",\
+    "timeFormat": "%s"\
+}\
 
 [setting:sa_crowdstrike_index]
 endpoint = /services/admin/macros/sa_crowdstrike_index
@@ -18,11 +24,3 @@ description = Configure SA-CrowdstrikeDevices index for Asset Database
 attribute = definition
 attribute_type = string
 link = [/manager/$@namespace$/data/macros/sa_crowdstrike_index?action=edit|Edit in manager]
-
-[setting:sa_crowdstrike_retention]
-endpoint = /services/admin/macros/sa_crowdstrike_retention
-label = SA-CrowdstrikeDevices Retention
-description = Amount of time before a device is removed from the Asset Database.
-attribute = definition
-attribute_type = string
-link = [/manager/$@namespace$/data/macros/sa_crowdstrike_retention?action=edit|Edit in manager]
