--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,6 +8,9 @@ on:
     paths:
       - "SA-CrowdstrikeDevices/**"
 
+permissions:
+  contents: write
+
 jobs:
   package:
     runs-on: ubuntu-latest
