--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -8,14 +8,5 @@ on:
     paths:
       - "docs/**"
 jobs:
-  publish:
-    name: Publish to retype branch
-    runs-on: ubuntu-latest
-    permissions:
-      contents: write
-    steps:
-      - uses: actions/checkout@v3
-      - uses: retypeapp/action-build@latest
-      - uses: retypeapp/action-github-pages@latest
-        with:
-          update-branch: true
+  call-packaging-workflow:
+    uses: ZachTheSplunker/app-wfa/.github/workflows/docs.yml@main
