--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,41 +8,8 @@ on:
     paths:
       - "SA-CrowdstrikeDevices/**"
 
-permissions:
-  contents: write
-
 jobs:
-  package:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-python@v4
-        with:
-          python-version: 3.7
-      - name: Download packaging toolkit
-        run: wget https://download.splunk.com/misc/packaging-toolkit/splunk-packaging-toolkit-1.0.1.tar.gz
-      - name: Install packaging toolkit
-        run: pip install splunk-packaging-toolkit-1.0.1.tar.gz
-      - name: Package app
-        id: app
-        run: |
-          slim package -o ~/build/packages SA-CrowdstrikeDevices
-          echo "app=$(realpath ~/build/packages/*)" >> $GITHUB_OUTPUT
-          cd ~/build/packages
-          md5sum $(ls) > $(ls).md5
-          echo "md5=$(realpath ~/build/packages/*.md5)" >> $GITHUB_OUTPUT
-      - name: Get info
-        id: info
-        run: |
-          echo "version=$(cat SA-CrowdstrikeDevices/app.manifest | jq -r .info.id.version)" >> $GITHUB_OUTPUT
-          echo "name=$(cat SA-CrowdstrikeDevices/app.manifest | jq -r .info.id.name)" >> $GITHUB_OUTPUT
-      - name: Draft Release
-        uses: softprops/action-gh-release@v1
-        with:
-          draft: true
-          name: ${{ steps.info.outputs.name }} v${{ steps.info.outputs.version }}
-          tag_name: v${{ steps.info.outputs.version }}
-          files: |
-            ${{ steps.app.outputs.app }}
-            ${{ steps.app.outputs.md5 }}
-            LICENSE
+  call-packaging-workflow:
+    uses: ZachTheSplunker/app-wfa/.github/workflows/release.yml@main
+    with:
+      package-name: SA-CrowdstrikeDevices
