--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -7,6 +7,10 @@ on:
       - master
     paths:
       - "docs/**"
+
+permissions:
+  contents: write
+
 jobs:
   call-packaging-workflow:
     uses: ZachTheSplunker/app-wfa/.github/workflows/docs.yml@main
