increased batch size for lookups
Signed-off-by: Zachary Christensen <zchristensen@splunk.com>

--- a/SA-CrowdstrikeDevices/default/transforms.conf
+++ b/SA-CrowdstrikeDevices/default/transforms.conf
@@ -9,3 +9,4 @@ collection = crowdstrike_devices_collection
 max_matches = 1
 case_sensitive_match = false
 fields_list = _key,_last_seen,bunit,category,city,country,dns,ip,is_expected,lat,long,mac,nt_host,priority
+max_ext_batch = 1000
