added deprecated notice
Signed-off-by: Zachary Christensen <zchristensen@splunk.com>

--- a/SA-CrowdstrikeDevices/default/savedsearches.conf
+++ b/SA-CrowdstrikeDevices/default/savedsearches.conf
@@ -67,7 +67,7 @@ search = `sa_crowdstrike_index` sourcetype="crowdstrike:device:json" \
 [CrowdStrike Devices Lookup - Cleanup]
 disabled = true
 cron_schedule = 29 * * * *
-description = removes old entries from kvstore lookup: crowdstrike_devices
+description = [deprecated] removes old entries from kvstore lookup: crowdstrike_devices
 dispatch.earliest_time = -1s
 dispatch.latest_time = now
 enableSched = 1
