added csv lookup for ES compatibility
Signed-off-by: Zachary Christensen <zchristensen@splunk.com>

--- a/SA-CrowdstrikeDevices/default/inputs.conf
+++ b/SA-CrowdstrikeDevices/default/inputs.conf
@@ -5,8 +5,9 @@
 
 [identity_manager://crowdstrike_devices]
 blacklist   = true
+denylist    = true
 category    = crowdstrike_devices
-description = Device information from SA-CrowdstrikeDevices.
+description = Device information from SA-CrowdstrikeDevices. Populated from report: CrowdStrike Devices Lookup - Gen
 target      = asset
-url         = lookup://crowdstrike_devices
+url         = lookup://crowdstrike_devices_es
 disabled    = False
