--- a/SA-CrowdstrikeDevices/default/savedsearches.conf
+++ b/SA-CrowdstrikeDevices/default/savedsearches.conf
@@ -10,7 +10,8 @@ description = populates kvstore lookup: crowdstrike_devices
 dispatch.earliest_time = -61m@m
 dispatch.latest_time = -1m@m
 enableSched = 1
-schedule_window = auto
+schedule_window = 0
+run_on_startup = true
 search = `sa_crowdstrike_index` sourcetype="crowdstrike:device:json" \
 | dedup falcon_device.device_id falcon_device.mac_address \
 | rename falcon_device.local_ip as ip \
@@ -62,6 +63,17 @@ search = `sa_crowdstrike_index` sourcetype="crowdstrike:device:json" \
 | table _key,_last_seen,ip,mac,nt_host,dns,bunit,priority,lat,long,city,country,category,is_expected \
 | outputlookup key_field=_key crowdstrike_devices \
 | stats count
+
+[CrowdStrike ES Devices Lookup - Gen]
+disabled = false
+cron_schedule = 24 * * * *
+description = populates kvstore lookup: crowdstrike_devices_es.csv from KVStore collection to make compatible with ES.
+dispatch.earliest_time = -1s
+dispatch.latest_time = now
+enableSched = 1
+schedule_window = 0
+run_on_startup = true
+search = | inputlookup crowdstrike_devices | outputlookup override_if_empty=false crowdstrike_devices_es.csv
 
 # Deprecated
 [CrowdStrike Devices Lookup - Cleanup]
