remove hidden fields
Signed-off-by: Zachary Christensen <zchristensen@splunk.com>

--- a/SA-CrowdstrikeDevices/default/savedsearches.conf
+++ b/SA-CrowdstrikeDevices/default/savedsearches.conf
@@ -73,7 +73,7 @@ dispatch.latest_time = now
 enableSched = 1
 schedule_window = 0
 run_on_startup = true
-search = | inputlookup crowdstrike_devices | outputlookup override_if_empty=false crowdstrike_devices_es.csv
+search = | inputlookup crowdstrike_devices | fields - _key, _last_seen | outputlookup override_if_empty=false crowdstrike_devices_es.csv
 
 # Deprecated
 [CrowdStrike Devices Lookup - Cleanup]
