--- a/SA-CrowdstrikeDevices/default/savedsearches.conf
+++ b/SA-CrowdstrikeDevices/default/savedsearches.conf
@@ -62,17 +62,15 @@ search = `sa_crowdstrike_index` sourcetype="crowdstrike:device:json" \
     _last_seen=now()\
 | table _key,_last_seen,ip,mac,nt_host,dns,bunit,priority,lat,long,city,country,category,is_expected \
 | outputlookup key_field=_key crowdstrike_devices \
+| appendpipe [| savedsearch "CrowdStrike ES Devices Lookup - Gen"]\
 | stats count
 
 [CrowdStrike ES Devices Lookup - Gen]
 disabled = false
-cron_schedule = 24 * * * *
 description = populates kvstore lookup: crowdstrike_devices_es.csv from KVStore collection to make compatible with ES.
 dispatch.earliest_time = -1s
 dispatch.latest_time = now
-enableSched = 1
-schedule_window = 0
-run_on_startup = true
+enableSched = 0
 search = | inputlookup crowdstrike_devices | fields - _key, _last_seen | outputlookup override_if_empty=false crowdstrike_devices_es.csv
 
 # Deprecated
